# mulua

./: .editorconfig  .gitlab-ci.yml  dune-project
examples/: dune  factorial.lua  run.t
lib/parser/: Grammar.mly  Lexer.re  Parser.re  Tokens.mly  dune
lib/semantics/: Environment.re  Expression.re  Program.re  Statement.re  Value.re  dune
lib/syntax/: Expression.re  Identifier.re  Program.re  Statement.re  dune
lib/total-map/: TotalMap.re  dune
